z-index issue

--- a/web/themes/custom/fds_green_theme/src/styles/theme/paragraph/paragraph--type--os2web-menu-links-paragraph/paragraph--type--os2web-menu-links-paragraph-content.scss
+++ b/web/themes/custom/fds_green_theme/src/styles/theme/paragraph/paragraph--type--os2web-menu-links-paragraph/paragraph--type--os2web-menu-links-paragraph-content.scss
@@ -9,7 +9,7 @@
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border: 0;
-
+    z-index: 1;
     @include media-breakpoint-only(xs) {
       order: 0;
     }
