--- a/web/themes/custom/fds_green_theme/src/styles/theme/paragraph/paragraph--type--os2web-menu-links-paragraph/paragraph--type--os2web-menu-links-paragraph.scss
+++ b/web/themes/custom/fds_green_theme/src/styles/theme/paragraph/paragraph--type--os2web-menu-links-paragraph/paragraph--type--os2web-menu-links-paragraph.scss
@@ -133,6 +133,7 @@
 
       &[aria-selected="true"] {
         background: $color-white;
+        z-index: 1;
         .field--name-field-ikon {
           svg {
             path:not([fill="none"]) {
